[gd_scene load_steps=4 format=2]

[ext_resource path="res://Mainmenu.gd" type="Script" id=1]
[ext_resource path="res://Screen.webm" type="VideoStream" id=2]
[ext_resource path="res://Audio/24. Guardians Of The Past.mp3" type="AudioStream" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Screen" type="VideoPlayer" parent="."]
margin_right = 640.0
margin_bottom = 400.0
stream = ExtResource( 2 )
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 440.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 540.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 440.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "IL MIO PRIMO RPG"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 440.0
margin_bottom = 280.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_right = 440.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewGameButton" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 440.0
margin_bottom = 31.0
focus_mode = 0
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 440.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoadsButton" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer2"]
margin_right = 440.0
margin_bottom = 32.0
focus_mode = 0
text = "Loads"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 440.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionsButton" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer4"]
margin_right = 440.0
margin_bottom = 31.0
text = "Options"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 440.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MadeByButton" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer3"]
margin_right = 440.0
margin_bottom = 32.0
focus_mode = 0
text = "Credits"

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
autoplay = true

[connection signal="finished" from="Screen" to="." method="_on_Screen_finished"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer2/LoadsButton" to="." method="_on_LoadsButton_pressed"]
[connection signal="finished" from="Intro" to="." method="_on_AudioStreamPlayer_finished"]
